# mpc_model_gazebo

model_description/urdf/car_like/: ackermann.urdf.xacro
model_description/urdf/car_like/ing/: ackermann.gazebo.xacro
model_gazeobo/: package.xml
model_gazeobo/launch/: ackermann_sq_world.launch  holonomic_sq_world.launch  no_ackermann_sq_world.launch
mpc_model_description/: CMakeLists.txt  package.xml
mpc_model_description/urdf/car_like/: ackermann_bot.urdf.xacro
mpc_model_description/urdf/car_like/ing/: differential_bot.urdf.xacro
mpc_model_gazebo/: CMakeLists.txt
mpc_model_gazebo/launch/: ackermann_sq_world.launch  diff_sq_world.launch  holonomic_sq_world.launch
mpc_model_gazebo/models/: sq_world.world
